Open Shaderpack now works on Linux * Still needs testing on OSX/Windows